--- a/androidapp/com.rejh.icerrr.itson/assets/www/css/size.tablet.css
+++ b/androidapp/com.rejh.icerrr.itson/assets/www/css/size.tablet.css
@@ -19,16 +19,12 @@ section { }
 	}
 	
 		.actionbar .icon_app {
-			width:72px; height:64px;
-			padding:0;
+			top:4px; left:8px;
+			height:64px;
 		}
 	
-			.actionbar .icon_app iron-icon {
-				margin:4px;
-			}
-			.actionbar .icon_app paper-icon-button {
-				margin:4px;
-			}
+			.actionbar .icon_app iron-icon {}
+			.actionbar .icon_app paper-icon-button { }
 		
 		.actionbar .title {
 			bottom:18px;
@@ -39,7 +35,8 @@ section { }
 		}
 			
 			.actionbar .actions paper-icon-button {
-				margin:12px 16px 12px 16px;
+				margin:8px 12px 8px 4px;
+				padding:12px;
 			}
 		
 			.actionbar .actions .action { /* TODO: deprecated */
